--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -14,8 +14,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.911779Z",
-     "start_time": "2025-12-03T18:03:27.907359Z"
+     "end_time": "2025-12-03T18:53:38.990059Z",
+     "start_time": "2025-12-03T18:53:38.060406Z"
     }
    },
    "source": [
@@ -36,13 +36,13 @@
     "from xgboost import XGBClassifier\n"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.926508Z",
-     "start_time": "2025-12-03T18:03:27.923036Z"
+     "end_time": "2025-12-03T18:53:39.038853Z",
+     "start_time": "2025-12-03T18:53:39.035253Z"
     }
    },
    "cell_type": "code",
@@ -64,13 +64,13 @@
    ],
    "id": "f153b18909e8ff2b",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.934173Z",
-     "start_time": "2025-12-03T18:03:27.926508Z"
+     "end_time": "2025-12-03T18:53:39.047595Z",
+     "start_time": "2025-12-03T18:53:39.043229Z"
     }
    },
    "cell_type": "code",
@@ -126,13 +126,13 @@
    ],
    "id": "9b6e97ae96521de4",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.940655Z",
-     "start_time": "2025-12-03T18:03:27.937265Z"
+     "end_time": "2025-12-03T18:53:39.095521Z",
+     "start_time": "2025-12-03T18:53:39.091540Z"
     }
    },
    "cell_type": "code",
@@ -156,13 +156,13 @@
    ],
    "id": "3be50f1d128a37cb",
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.947389Z",
-     "start_time": "2025-12-03T18:03:27.943924Z"
+     "end_time": "2025-12-03T18:53:39.103553Z",
+     "start_time": "2025-12-03T18:53:39.099563Z"
     }
    },
    "cell_type": "code",
@@ -193,13 +193,13 @@
    ],
    "id": "3583d91cc2361cad",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.952910Z",
-     "start_time": "2025-12-03T18:03:27.947389Z"
+     "end_time": "2025-12-03T18:53:39.111372Z",
+     "start_time": "2025-12-03T18:53:39.107476Z"
     }
    },
    "cell_type": "code",
@@ -222,13 +222,13 @@
    ],
    "id": "dd5366d77db102ed",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.958652Z",
-     "start_time": "2025-12-03T18:03:27.952910Z"
+     "end_time": "2025-12-03T18:53:39.119023Z",
+     "start_time": "2025-12-03T18:53:39.115279Z"
     }
    },
    "cell_type": "code",
@@ -261,13 +261,13 @@
    ],
    "id": "9c80c7e39f799121",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.964923Z",
-     "start_time": "2025-12-03T18:03:27.961732Z"
+     "end_time": "2025-12-03T18:53:39.126880Z",
+     "start_time": "2025-12-03T18:53:39.122769Z"
     }
    },
    "cell_type": "code",
@@ -302,13 +302,13 @@
    ],
    "id": "e5d7ad36d83bf318",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.970677Z",
-     "start_time": "2025-12-03T18:03:27.964923Z"
+     "end_time": "2025-12-03T18:53:39.134159Z",
+     "start_time": "2025-12-03T18:53:39.130953Z"
     }
    },
    "cell_type": "code",
@@ -338,13 +338,13 @@
    ],
    "id": "bc27d1ccffd17132",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.976484Z",
-     "start_time": "2025-12-03T18:03:27.970677Z"
+     "end_time": "2025-12-03T18:53:39.142260Z",
+     "start_time": "2025-12-03T18:53:39.139164Z"
     }
    },
    "cell_type": "code",
@@ -383,13 +383,13 @@
    ],
    "id": "f12e420763911a7f",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T18:03:27.986829Z",
-     "start_time": "2025-12-03T18:03:27.979200Z"
+     "end_time": "2025-12-03T18:53:39.159701Z",
+     "start_time": "2025-12-03T18:53:39.151266Z"
     }
    },
    "cell_type": "code",
@@ -448,9 +448,11 @@
     "        individuo.performance = individuo.retornarPerformance()\n",
     "\n",
     "    def fazerCrossover(self, pai, mae):\n",
-    "        for i in range(self.qtd_genes):\n",
-    "            if randint(0, 1) == 1:\n",
-    "                pai.cromossomo[i], mae.cromossomo[i] = mae.cromossomo[i], pai.cromossomo[i]\n",
+    "        qtd_indices = randint(1, self.qtd_genes // 2)\n",
+    "        indices = sample(range(self.qtd_genes), qtd_indices)\n",
+    "\n",
+    "        for i in indices:\n",
+    "            pai.cromossomo[i], mae.cromossomo[i] = mae.cromossomo[i], pai.cromossomo[i]\n",
     "\n",
     "        return pai, mae\n",
     "\n",
@@ -511,7 +513,7 @@
    ],
    "id": "1733fe08a45a96c",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 12
   },
   {
    "metadata": {},
