--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -401,7 +401,7 @@
     "        self.algoritmo = definirAlgoritmo(tipo_algoritmo)\n",
     "        self.qtd_genes = self.algoritmo.qtd_genes\n",
     "        self.chance_de_mutar = 1 / self.qtd_genes\n",
-    "        self.melhor_individuo = None\n",
+    "        self.melhor_individuo = Individuo(None)\n",
     "\n",
     "        self.x_treinamento = None\n",
     "        self.y_treinamento = None\n",
@@ -448,8 +448,7 @@
     "        individuo.performance = individuo.retornarPerformance()\n",
     "\n",
     "    def fazerCrossover(self, pai, mae):\n",
-    "        qtd_indices = randint(1, self.qtd_genes // 2)\n",
-    "        indices = sample(range(self.qtd_genes), qtd_indices)\n",
+    "        indices = sample(range(self.qtd_genes), randint(1, self.qtd_genes // 2))\n",
     "\n",
     "        for i in indices:\n",
     "            pai.cromossomo[i], mae.cromossomo[i] = mae.cromossomo[i], pai.cromossomo[i]\n",
@@ -482,7 +481,6 @@
     "                   format(acuracia, precisao, recall, media))\n",
     "\n",
     "    def executar(self):\n",
-    "        self.melhor_individuo = Individuo(None)\n",
     "        populacao = self.gerarPopulacao()\n",
     "\n",
     "        for individuo in populacao:\n",
