--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -12,11 +12,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:38.990059Z",
-     "start_time": "2025-12-03T18:53:38.060406Z"
-    }
+    "collapsed": true
    },
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
@@ -26,7 +22,6 @@
     "from abc import ABC, abstractmethod\n",
     "from pandas import read_parquet\n",
     "from copy import deepcopy\n",
-    "from numpy import inf\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -36,21 +31,16 @@
     "from xgboost import XGBClassifier\n"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.038853Z",
-     "start_time": "2025-12-03T18:53:39.035253Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class Individuo:\n",
     "    def __init__(self, cromossomo):\n",
     "        self.cromossomo = cromossomo\n",
-    "        self.performance = -inf\n",
+    "        self.performance = 0\n",
     "        self.acuracia = None\n",
     "        self.precisao = None\n",
     "        self.recall = None\n",
@@ -64,15 +54,10 @@
    ],
    "id": "f153b18909e8ff2b",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.047595Z",
-     "start_time": "2025-12-03T18:53:39.043229Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class Algoritmo(ABC):\n",
@@ -126,15 +111,10 @@
    ],
    "id": "9b6e97ae96521de4",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.095521Z",
-     "start_time": "2025-12-03T18:53:39.091540Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class KNN(Algoritmo):\n",
@@ -156,15 +136,10 @@
    ],
    "id": "3be50f1d128a37cb",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.103553Z",
-     "start_time": "2025-12-03T18:53:39.099563Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class RFC(Algoritmo):\n",
@@ -193,15 +168,10 @@
    ],
    "id": "3583d91cc2361cad",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.111372Z",
-     "start_time": "2025-12-03T18:53:39.107476Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class LR(Algoritmo):\n",
@@ -218,19 +188,15 @@
     "        solvers = ['liblinear', 'saga']\n",
     "        penalties = ['l1', 'l2']\n",
     "\n",
-    "        return LogisticRegression(C=genes[0], max_iter=genes[1], solver=solvers[genes[2]], penalty=penalties[genes[3]])\n"
+    "        return LogisticRegression(C=genes[0], max_iter=genes[1], solver=solvers[genes[2]],\n",
+    "                                  penalty=penalties[genes[3]], n_jobs=-1)\n"
    ],
    "id": "dd5366d77db102ed",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.119023Z",
-     "start_time": "2025-12-03T18:53:39.115279Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class XGB(Algoritmo):\n",
@@ -261,15 +227,10 @@
    ],
    "id": "9c80c7e39f799121",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.126880Z",
-     "start_time": "2025-12-03T18:53:39.122769Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class LGBM(Algoritmo):\n",
@@ -302,15 +263,10 @@
    ],
    "id": "e5d7ad36d83bf318",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.134159Z",
-     "start_time": "2025-12-03T18:53:39.130953Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class CBC(Algoritmo):\n",
@@ -338,15 +294,10 @@
    ],
    "id": "bc27d1ccffd17132",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.142260Z",
-     "start_time": "2025-12-03T18:53:39.139164Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def definirAlgoritmo(tipo_algoritmo):\n",
@@ -383,19 +334,14 @@
    ],
    "id": "f12e420763911a7f",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T18:53:39.159701Z",
-     "start_time": "2025-12-03T18:53:39.151266Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "class GA:\n",
-    "    def __init__(self, num_individuos, num_populacoes, tipo_algoritmo, endereco_parquet):\n",
+    "    def __init__(self, num_individuos, num_populacoes, tipo_algoritmo):\n",
     "        self.num_individuos = num_individuos\n",
     "        self.num_populacoes = num_populacoes\n",
     "        self.algoritmo = definirAlgoritmo(tipo_algoritmo)\n",
@@ -409,8 +355,6 @@
     "        self.y_validacao = None\n",
     "        self.x_teste = None\n",
     "        self.y_teste = None\n",
-    "\n",
-    "        self.definirXY(endereco_parquet)\n",
     "\n",
     "    def definirXY(self, endereco_parquet):\n",
     "        dataframe = read_parquet(endereco_parquet)\n",
@@ -448,7 +392,7 @@
     "        individuo.performance = individuo.retornarPerformance()\n",
     "\n",
     "    def fazerCrossover(self, pai, mae):\n",
-    "        indices = sample(range(self.qtd_genes), randint(1, self.qtd_genes // 2))\n",
+    "        indices = sample(range(self.qtd_genes), randint(1, self.qtd_genes - 1))\n",
     "\n",
     "        for i in indices:\n",
     "            pai.cromossomo[i], mae.cromossomo[i] = mae.cromossomo[i], pai.cromossomo[i]\n",
@@ -480,38 +424,49 @@
     "        file.write(\"\\nPerformance no Teste -> Acuracia: {}%, Precisao: {}%, Recall: {}%, Media: {}%\".\n",
     "                   format(acuracia, precisao, recall, media))\n",
     "\n",
-    "    def executar(self):\n",
-    "        populacao = self.gerarPopulacao()\n",
+    "    def comecarPrimeiroLoop(self, populacao, file):\n",
+    "        file.write(\"1* Populacao:\\n\")\n",
     "\n",
     "        for individuo in populacao:\n",
     "            self.ajustarMetricas(individuo)\n",
+    "            file.write(str(individuo) + '\\n')\n",
+    "\n",
+    "            if individuo.performance > self.melhor_individuo.performance:\n",
+    "                self.melhor_individuo = deepcopy(individuo)\n",
+    "\n",
+    "        file.write('\\nMelhor ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
+    "\n",
+    "    def comecarDemaisLoops(self, populacao, file):\n",
+    "        for num_populacao in range(1, self.num_populacoes):\n",
+    "            file.write(\"{}* Populacao:\\n\".format(num_populacao + 1))\n",
+    "            nova_populacao = []\n",
+    "\n",
+    "            for _ in range(self.num_individuos // 2):\n",
+    "                pai, mae = selecionarPorTorneio(populacao)\n",
+    "                filho, filha = self.fazerCrossover(pai, mae)\n",
+    "                irmaos = self.mutar(filho, filha)\n",
+    "\n",
+    "                for irmao in irmaos:\n",
+    "                    file.write(str(irmao) + '\\n')\n",
+    "                    nova_populacao.append(irmao)\n",
+    "\n",
+    "                    if irmao.performance > self.melhor_individuo.performance:\n",
+    "                        self.melhor_individuo = deepcopy(irmao)\n",
+    "\n",
+    "            file.write('\\nMelhor ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
+    "            populacao = nova_populacao\n",
+    "\n",
+    "    def executar(self):\n",
+    "        populacao = self.gerarPopulacao()\n",
     "\n",
     "        with open(\"resultados/\" + str(self.algoritmo) + \".txt\", \"w\") as file:\n",
-    "            for num_populacao in range(self.num_populacoes):\n",
-    "                file.write(\"{}* Populacao:\\n\".format(num_populacao + 1))\n",
-    "                nova_populacao = []\n",
-    "\n",
-    "                for _ in range(self.num_individuos // 2):\n",
-    "                    pai, mae = selecionarPorTorneio(populacao)\n",
-    "                    filho, filha = self.fazerCrossover(pai, mae)\n",
-    "                    irmaos = self.mutar(filho, filha)\n",
-    "\n",
-    "                    for irmao in irmaos:\n",
-    "                        file.write(str(irmao) + '\\n')\n",
-    "\n",
-    "                        if irmao.performance > self.melhor_individuo.performance:\n",
-    "                            self.melhor_individuo = deepcopy(irmao)\n",
-    "\n",
-    "                    nova_populacao.extend(irmaos)\n",
-    "\n",
-    "                file.write('\\nMelhor ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
-    "                populacao = nova_populacao\n",
-    "\n",
+    "            self.comecarPrimeiroLoop(populacao, file)\n",
+    "            self.comecarDemaisLoops(populacao, file)\n",
     "            self.avaliarMelhorNoTeste(file)\n"
    ],
    "id": "1733fe08a45a96c",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -522,7 +477,8 @@
     "\n",
     "for item in lista:\n",
     "    print(item)\n",
-    "    ga = GA(10, 10, item, 'datasets/heart.parquet')\n",
+    "    ga = GA(10, 10, item)\n",
+    "    ga.definirXY('datasets/mimic iv.parquet')\n",
     "    ga.executar()\n"
    ],
    "id": "5fbd2e08c02343a3",
