--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -15,7 +15,7 @@
     "collapsed": true
    },
    "source": [
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from random import uniform, randint, sample\n",
@@ -26,6 +26,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "from catboost import CatBoostClassifier\n",
     "from lightgbm import LGBMClassifier\n",
     "from xgboost import XGBClassifier\n"
@@ -40,17 +41,13 @@
     "class Individuo:\n",
     "    def __init__(self, cromossomo):\n",
     "        self.cromossomo = cromossomo\n",
-    "        self.performance = 0\n",
-    "        self.acuracia = None\n",
     "        self.precisao = None\n",
     "        self.recall = None\n",
-    "\n",
-    "    def retornarPerformance(self):\n",
-    "        return round((self.acuracia + 2 * self.precisao + 3 * self.recall) / 6, 1)\n",
+    "        self.f1 = 0\n",
     "\n",
     "    def __str__(self):\n",
-    "        return ('Cromossomo: {} -> Acuracia: {}%, Precisao: {}%, Recall: {}%, Performance: {}%'.\n",
-    "                format(self.cromossomo, self.acuracia, self.precisao, self.recall, self.performance))\n"
+    "        return ('Cromossomo: {} -> Precisao: {}%, Recall: {}%, F1: {}%'.\n",
+    "                format(self.cromossomo, self.precisao, self.recall, self.f1))\n"
    ],
    "id": "f153b18909e8ff2b",
    "outputs": [],
@@ -300,6 +297,38 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "class MLP(Algoritmo):\n",
+    "    def __str__(self):\n",
+    "        return \"MULTI LAYER PERCEPTRON\"\n",
+    "\n",
+    "    def definirMinimo(self):\n",
+    "        return [50, 0.0001, 0.0001, 0.5, 100]\n",
+    "\n",
+    "    def definirMaximo(self):\n",
+    "        return [300, 0.1, 0.01, 0.99, 400]\n",
+    "\n",
+    "    def gerarModelo(self, genes):\n",
+    "        return MLPClassifier(\n",
+    "            hidden_layer_sizes=(genes[0],),\n",
+    "            learning_rate_init=genes[1],\n",
+    "            alpha=genes[2],\n",
+    "            momentum=genes[3],\n",
+    "            max_iter=genes[4],\n",
+    "            solver=\"sgd\",\n",
+    "            activation=\"relu\",\n",
+    "            n_iter_no_change=20,\n",
+    "            early_stopping=False,\n",
+    "            verbose=False,\n",
+    "        )"
+   ],
+   "id": "7a45b920f487f495",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "def definirAlgoritmo(tipo_algoritmo):\n",
     "    if tipo_algoritmo == \"KNeighborsClassifier\":\n",
     "        return KNN()\n",
@@ -313,6 +342,8 @@
     "        return LGBM()\n",
     "    if tipo_algoritmo == \"CatBoostClassifier\":\n",
     "        return CBC()\n",
+    "    if tipo_algoritmo == \"MLPClassifier\":\n",
+    "        return MLP()\n",
     "\n",
     "    return None\n",
     "\n",
@@ -320,12 +351,12 @@
     "def selecionarPorTorneio(populacao):\n",
     "    pai1, pai2, mae1, mae2 = sample(populacao, 4)\n",
     "\n",
-    "    if pai1.performance > pai2.performance:\n",
+    "    if pai1.f1 > pai2.f1:\n",
     "        pai = pai1\n",
     "    else:\n",
     "        pai = pai2\n",
     "\n",
-    "    if mae1.performance > mae2.performance:\n",
+    "    if mae1.f1 > mae2.f1:\n",
     "        mae = mae1\n",
     "    else:\n",
     "        mae = mae2\n",
@@ -380,16 +411,20 @@
     "\n",
     "        return populacao\n",
     "\n",
-    "    def ajustarMetricas(self, individuo):\n",
-    "        modelo = self.algoritmo.gerarModelo(individuo.cromossomo)\n",
+    "    def ajustarMetricas(self, cromossomo):\n",
+    "        modelo = self.algoritmo.gerarModelo(cromossomo)\n",
     "        modelo.fit(self.x_treinamento, self.y_treinamento)\n",
     "        previsoes = modelo.predict(self.x_validacao)\n",
     "\n",
-    "        individuo.acuracia = round(accuracy_score(self.y_validacao, previsoes) * 100, 1)\n",
-    "        individuo.precisao = round(precision_score(self.y_validacao, previsoes, zero_division=0) * 100, 1)\n",
-    "        individuo.recall = round(recall_score(self.y_validacao, previsoes, zero_division=0) * 100, 1)\n",
+    "        precisao = round(precision_score(self.y_validacao, previsoes, zero_division=0) * 100, 1)\n",
+    "        recall = round(recall_score(self.y_validacao, previsoes, zero_division=0) * 100, 1)\n",
     "\n",
-    "        individuo.performance = individuo.retornarPerformance()\n",
+    "        if precisao + recall == 0.0:\n",
+    "            f1 = 0.0\n",
+    "        else:\n",
+    "            f1 = round(2 * precisao * recall / (precisao + recall), 1)\n",
+    "\n",
+    "        return precisao, recall, f1\n",
     "\n",
     "    def fazerCrossover(self, pai, mae):\n",
     "        indices = sample(range(self.qtd_genes), randint(1, self.qtd_genes - 1))\n",
@@ -406,8 +441,8 @@
     "            if uniform(0, 1) <= self.chance_de_mutar:\n",
     "                filha.cromossomo[i] = self.algoritmo.gerarGene(i)\n",
     "\n",
-    "        self.ajustarMetricas(filho)\n",
-    "        self.ajustarMetricas(filha)\n",
+    "        filho.precisao, filho.recall, filho.f1 = self.ajustarMetricas(filho.cromossomo)\n",
+    "        filha.precisao, filha.recall, filha.f1 = self.ajustarMetricas(filha.cromossomo)\n",
     "\n",
     "        return [filho, filha]\n",
     "\n",
@@ -416,22 +451,24 @@
     "        modelo.fit(self.x_treinamento, self.y_treinamento)\n",
     "        previsoes = modelo.predict(self.x_teste)\n",
     "\n",
-    "        acuracia = round(accuracy_score(self.y_teste, previsoes) * 100, 1)\n",
     "        precisao = round(precision_score(self.y_teste, previsoes, zero_division=0) * 100, 1)\n",
     "        recall = round(recall_score(self.y_teste, previsoes, zero_division=0) * 100, 1)\n",
-    "        media = round((acuracia + 2 * precisao + 3 * recall) / 6, 1)\n",
     "\n",
-    "        file.write(\"\\nPerformance no Teste -> Acuracia: {}%, Precisao: {}%, Recall: {}%, Media: {}%\".\n",
-    "                   format(acuracia, precisao, recall, media))\n",
+    "        if precisao + recall == 0.0:\n",
+    "            f1 = 0.0\n",
+    "        else:\n",
+    "            f1 = round(2 * precisao * recall / (precisao + recall), 1)\n",
+    "\n",
+    "        file.write(\"\\nPerformance no Teste -> Precisao: {}%, Recall: {}%, F1: {}%\".format(precisao, recall, f1))\n",
     "\n",
     "    def comecarPrimeiroLoop(self, populacao, file):\n",
     "        file.write(\"1* Populacao:\\n\")\n",
     "\n",
     "        for individuo in populacao:\n",
-    "            self.ajustarMetricas(individuo)\n",
+    "            individuo.precisao, individuo.recall, individuo.f1 = self.ajustarMetricas(individuo.cromossomo)\n",
     "            file.write(str(individuo) + '\\n')\n",
     "\n",
-    "            if individuo.performance > self.melhor_individuo.performance:\n",
+    "            if individuo.f1 > self.melhor_individuo.f1:\n",
     "                self.melhor_individuo = deepcopy(individuo)\n",
     "\n",
     "        file.write('\\nMelhor ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
@@ -450,7 +487,7 @@
     "                    file.write(str(irmao) + '\\n')\n",
     "                    nova_populacao.append(irmao)\n",
     "\n",
-    "                    if irmao.performance > self.melhor_individuo.performance:\n",
+    "                    if irmao.f1 > self.melhor_individuo.f1:\n",
     "                        self.melhor_individuo = deepcopy(irmao)\n",
     "\n",
     "            file.write('\\nMelhor ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
@@ -473,12 +510,12 @@
    "cell_type": "code",
    "source": [
     "lista = [\"KNeighborsClassifier\", \"RandomForestClassifier\", \"LogisticRegression\",\n",
-    "         \"XGBClassifier\", \"LGBMClassifier\", \"CatBoostClassifier\"]\n",
+    "         \"XGBClassifier\", \"LGBMClassifier\", \"CatBoostClassifier\", \"MLPClassifier\"]\n",
     "\n",
     "for item in lista:\n",
     "    print(item)\n",
     "    ga = GA(10, 10, item)\n",
-    "    ga.definirXY('datasets/mimic iv.parquet')\n",
+    "    ga.definirXY('datasets/mimic IV.parquet')\n",
     "    ga.executar()\n"
    ],
    "id": "5fbd2e08c02343a3",
