--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -15,13 +15,14 @@
     "collapsed": true
    },
    "source": [
-    "from sklearn.metrics import precision_score, recall_score\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from random import uniform, randint, sample\n",
     "from abc import ABC, abstractmethod\n",
     "from pandas import read_parquet\n",
     "from copy import deepcopy\n",
+    "from math import ceil\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -41,13 +42,14 @@
     "class Individuo:\n",
     "    def __init__(self, cromossomo):\n",
     "        self.cromossomo = cromossomo\n",
+    "        self.acuracia = None\n",
     "        self.precisao = None\n",
     "        self.recall = None\n",
-    "        self.f1 = 0\n",
+    "        self.media = 0\n",
     "\n",
     "    def __str__(self):\n",
-    "        return ('Cromossomo: {} -> Precisao: {}%, Recall: {}%, F1: {}%'.\n",
-    "                format(self.cromossomo, self.precisao, self.recall, self.f1))\n"
+    "        return ('Genes: {} -> Acuracia: {}%, Precisao: {}%, Recall: {}%, Media: {}%'.\n",
+    "                format(self.cromossomo, self.acuracia, self.precisao, self.recall, self.media))\n"
    ],
    "id": "f153b18909e8ff2b",
    "outputs": [],
@@ -298,30 +300,81 @@
    "cell_type": "code",
    "source": [
     "class MLP(Algoritmo):\n",
-    "    def __str__(self):\n",
-    "        return \"MULTI LAYER PERCEPTRON\"\n",
+    "    def __init__(self):\n",
+    "        self.qtd_camadas_ocultas = self.definirNumeroCamadasOcultas()\n",
+    "        super().__init__()\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def definirNumeroCamadasOcultas(self):\n",
+    "        pass\n",
     "\n",
     "    def definirMinimo(self):\n",
-    "        return [50, 0.0001, 0.0001, 0.5, 100]\n",
+    "        return [0, 0.0001, 0.0001, 128] + [16] * self.qtd_camadas_ocultas\n",
     "\n",
     "    def definirMaximo(self):\n",
-    "        return [300, 0.1, 0.01, 0.99, 400]\n",
+    "        return [3, 1, 1, 512] + [512] * self.qtd_camadas_ocultas\n",
     "\n",
     "    def gerarModelo(self, genes):\n",
+    "        activation = [\"identity\", \"logistic\", \"tanh\", \"relu\"]\n",
+    "\n",
     "        return MLPClassifier(\n",
-    "            hidden_layer_sizes=(genes[0],),\n",
+    "            activation=activation[genes[0]],\n",
     "            learning_rate_init=genes[1],\n",
     "            alpha=genes[2],\n",
-    "            momentum=genes[3],\n",
-    "            max_iter=genes[4],\n",
-    "            solver=\"sgd\",\n",
-    "            activation=\"relu\",\n",
-    "            n_iter_no_change=20,\n",
-    "            early_stopping=False,\n",
-    "            verbose=False,\n",
-    "        )"
+    "            batch_size=genes[3],\n",
+    "            hidden_layer_sizes=tuple(genes[4:]),\n",
+    "            early_stopping=True,\n",
+    "            n_iter_no_change=50,\n",
+    "            max_iter=2000,\n",
+    "            solver=\"adam\",\n",
+    "        )\n"
    ],
    "id": "7a45b920f487f495",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "class MLP1(MLP):\n",
+    "    def __str__(self):\n",
+    "        return \"MLP - 1 CAMADA OCULTA\"\n",
+    "\n",
+    "    def definirNumeroCamadasOcultas(self):\n",
+    "        return 1"
+   ],
+   "id": "585f6acf44bd22c7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "class MLP2(MLP):\n",
+    "    def __str__(self):\n",
+    "        return \"MLP - 2 CAMADAS OCULTAS\"\n",
+    "\n",
+    "    def definirNumeroCamadasOcultas(self):\n",
+    "        return 2"
+   ],
+   "id": "d8058797292892e4",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "class MLP3(MLP):\n",
+    "    def __str__(self):\n",
+    "        return \"MLP - 3 CAMADAS OCULTAS\"\n",
+    "\n",
+    "    def definirNumeroCamadasOcultas(self):\n",
+    "        return 3"
+   ],
+   "id": "bdd45db763dfa516",
    "outputs": [],
    "execution_count": null
   },
@@ -342,8 +395,12 @@
     "        return LGBM()\n",
     "    if tipo_algoritmo == \"CatBoostClassifier\":\n",
     "        return CBC()\n",
-    "    if tipo_algoritmo == \"MLPClassifier\":\n",
-    "        return MLP()\n",
+    "    if tipo_algoritmo == \"MLPClassifier1\":\n",
+    "        return MLP1()\n",
+    "    if tipo_algoritmo == \"MLPClassifier2\":\n",
+    "        return MLP2()\n",
+    "    if tipo_algoritmo == \"MLPClassifier3\":\n",
+    "        return MLP3()\n",
     "\n",
     "    return None\n",
     "\n",
@@ -351,12 +408,12 @@
     "def selecionarPorTorneio(populacao):\n",
     "    pai1, pai2, mae1, mae2 = sample(populacao, 4)\n",
     "\n",
-    "    if pai1.f1 > pai2.f1:\n",
+    "    if pai1.media > pai2.media:\n",
     "        pai = pai1\n",
     "    else:\n",
     "        pai = pai2\n",
     "\n",
-    "    if mae1.f1 > mae2.f1:\n",
+    "    if mae1.media > mae2.media:\n",
     "        mae = mae1\n",
     "    else:\n",
     "        mae = mae2\n",
@@ -416,18 +473,36 @@
     "        modelo.fit(self.x_treinamento, self.y_treinamento)\n",
     "        previsoes = modelo.predict(self.x_validacao)\n",
     "\n",
-    "        precisao = round(precision_score(self.y_validacao, previsoes, zero_division=0) * 100, 1)\n",
-    "        recall = round(recall_score(self.y_validacao, previsoes, zero_division=0) * 100, 1)\n",
+    "        acuracia = round(accuracy_score(self.y_validacao, previsoes) * 100, 1)\n",
+    "        precisao = round(precision_score(self.y_validacao, previsoes, zero_division=0, average='macro') * 100, 1)\n",
+    "        recall = round(recall_score(self.y_validacao, previsoes, zero_division=0, average='macro') * 100, 1)\n",
     "\n",
-    "        if precisao + recall == 0.0:\n",
-    "            f1 = 0.0\n",
+    "        if acuracia == 0.0 or precisao == 0.0 or recall == 0.0:\n",
+    "            media = 0.0\n",
     "        else:\n",
-    "            f1 = round(2 * precisao * recall / (precisao + recall), 1)\n",
+    "            media = round(3 / (1 / acuracia + 1 / precisao + 1 / recall), 1)\n",
     "\n",
-    "        return precisao, recall, f1\n",
+    "        return acuracia, precisao, recall, media\n",
+    "\n",
+    "    def avaliarMelhorNoTeste(self, file):\n",
+    "        modelo = self.algoritmo.gerarModelo(self.melhor_individuo.cromossomo)\n",
+    "        modelo.fit(self.x_treinamento, self.y_treinamento)\n",
+    "        previsoes = modelo.predict(self.x_teste)\n",
+    "\n",
+    "        acuracia = round(accuracy_score(self.y_teste, previsoes) * 100, 1)\n",
+    "        precisao = round(precision_score(self.y_teste, previsoes, zero_division=0, average='macro') * 100, 1)\n",
+    "        recall = round(recall_score(self.y_teste, previsoes, zero_division=0, average='macro') * 100, 1)\n",
+    "\n",
+    "        if acuracia == 0.0 or precisao == 0.0 or recall == 0.0:\n",
+    "            media = 0.0\n",
+    "        else:\n",
+    "            media = round(3 / (1 / acuracia + 1 / precisao + 1 / recall), 1)\n",
+    "\n",
+    "        file.write(\"\\nPerformance no Teste -> Acuracia: {}%, Precisao: {}%, Recall: {}%, Media: {}%\".\n",
+    "                   format(acuracia, precisao, recall, media))\n",
     "\n",
     "    def fazerCrossover(self, pai, mae):\n",
-    "        indices = sample(range(self.qtd_genes), randint(1, self.qtd_genes - 1))\n",
+    "        indices = sample(range(self.qtd_genes), randint(1, ceil(self.qtd_genes / 2)))\n",
     "\n",
     "        for i in indices:\n",
     "            pai.cromossomo[i], mae.cromossomo[i] = mae.cromossomo[i], pai.cromossomo[i]\n",
@@ -441,37 +516,24 @@
     "            if uniform(0, 1) <= self.chance_de_mutar:\n",
     "                filha.cromossomo[i] = self.algoritmo.gerarGene(i)\n",
     "\n",
-    "        filho.precisao, filho.recall, filho.f1 = self.ajustarMetricas(filho.cromossomo)\n",
-    "        filha.precisao, filha.recall, filha.f1 = self.ajustarMetricas(filha.cromossomo)\n",
+    "        filho.acuracia, filho.precisao, filho.recall, filho.media = self.ajustarMetricas(filho.cromossomo)\n",
+    "        filha.acuracia, filha.precisao, filha.recall, filha.media = self.ajustarMetricas(filha.cromossomo)\n",
     "\n",
     "        return [filho, filha]\n",
-    "\n",
-    "    def avaliarMelhorNoTeste(self, file):\n",
-    "        modelo = self.algoritmo.gerarModelo(self.melhor_individuo.cromossomo)\n",
-    "        modelo.fit(self.x_treinamento, self.y_treinamento)\n",
-    "        previsoes = modelo.predict(self.x_teste)\n",
-    "\n",
-    "        precisao = round(precision_score(self.y_teste, previsoes, zero_division=0) * 100, 1)\n",
-    "        recall = round(recall_score(self.y_teste, previsoes, zero_division=0) * 100, 1)\n",
-    "\n",
-    "        if precisao + recall == 0.0:\n",
-    "            f1 = 0.0\n",
-    "        else:\n",
-    "            f1 = round(2 * precisao * recall / (precisao + recall), 1)\n",
-    "\n",
-    "        file.write(\"\\nPerformance no Teste -> Precisao: {}%, Recall: {}%, F1: {}%\".format(precisao, recall, f1))\n",
     "\n",
     "    def comecarPrimeiroLoop(self, populacao, file):\n",
     "        file.write(\"1* Populacao:\\n\")\n",
     "\n",
     "        for individuo in populacao:\n",
-    "            individuo.precisao, individuo.recall, individuo.f1 = self.ajustarMetricas(individuo.cromossomo)\n",
+    "            individuo.acuracia, individuo.precisao, individuo.recall, individuo.media = (\n",
+    "                self.ajustarMetricas(individuo.cromossomo))\n",
+    "\n",
     "            file.write(str(individuo) + '\\n')\n",
     "\n",
-    "            if individuo.f1 > self.melhor_individuo.f1:\n",
+    "            if individuo.media > self.melhor_individuo.media:\n",
     "                self.melhor_individuo = deepcopy(individuo)\n",
     "\n",
-    "        file.write('\\nMelhor ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
+    "        file.write('\\nMelhores ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
     "\n",
     "    def comecarDemaisLoops(self, populacao, file):\n",
     "        for num_populacao in range(1, self.num_populacoes):\n",
@@ -487,10 +549,10 @@
     "                    file.write(str(irmao) + '\\n')\n",
     "                    nova_populacao.append(irmao)\n",
     "\n",
-    "                    if irmao.f1 > self.melhor_individuo.f1:\n",
+    "                    if irmao.media > self.melhor_individuo.media:\n",
     "                        self.melhor_individuo = deepcopy(irmao)\n",
     "\n",
-    "            file.write('\\nMelhor ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
+    "            file.write('\\nMelhores ' + str(self.melhor_individuo) + \"\\n\\n\")\n",
     "            populacao = nova_populacao\n",
     "\n",
     "    def executar(self):\n",
@@ -509,8 +571,17 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "lista = [\"KNeighborsClassifier\", \"RandomForestClassifier\", \"LogisticRegression\",\n",
-    "         \"XGBClassifier\", \"LGBMClassifier\", \"CatBoostClassifier\", \"MLPClassifier\"]\n",
+    "lista = [\n",
+    "    \"MLPClassifier3\",\n",
+    "    \"MLPClassifier2\",\n",
+    "    \"MLPClassifier1\",\n",
+    "    \"CatBoostClassifier\",\n",
+    "    \"LGBMClassifier\",\n",
+    "    \"XGBClassifier\",\n",
+    "    \"LogisticRegression\",\n",
+    "    \"RandomForestClassifier\",\n",
+    "    \"KNeighborsClassifier\"\n",
+    "]\n",
     "\n",
     "for item in lista:\n",
     "    print(item)\n",
