--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -3,7 +3,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "!pip install scikit-learn pandas numpy xgboost catboost lightgbm pyarrow",
+   "source": "!pip install scikit-learn pandas numpy xgboost catboost lightgbm pyarrow imblearn",
    "id": "801c5299e90d233",
    "outputs": [],
    "execution_count": null
@@ -15,10 +15,11 @@
     "collapsed": true
    },
    "source": [
-    "from sklearn.metrics import precision_score, recall_score, accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from random import uniform, randint, sample\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "from abc import ABC, abstractmethod\n",
     "from pandas import read_parquet\n",
     "from copy import deepcopy\n",
@@ -28,6 +29,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from catboost import CatBoostClassifier\n",
     "from lightgbm import LGBMClassifier\n",
     "from xgboost import XGBClassifier\n"
@@ -134,6 +136,35 @@
     "                                    metric=lista_metric[genes[2]], leaf_size=genes[3], n_jobs=-1)\n"
    ],
    "id": "3be50f1d128a37cb",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "class DTC(Algoritmo):\n",
+    "    def __str__(self):\n",
+    "        return 'DECISION TREE CLASSIFIER'\n",
+    "\n",
+    "    def definirMinimo(self):\n",
+    "        return [5, 2, 1, 0]\n",
+    "\n",
+    "    def definirMaximo(self):\n",
+    "        return [25, 10, 5, 2]\n",
+    "\n",
+    "    def gerarModelo(self, genes):\n",
+    "        max_features_list = [\"sqrt\", \"log2\", 0.8]\n",
+    "\n",
+    "        return DecisionTreeClassifier(\n",
+    "            max_depth=genes[0],\n",
+    "            min_samples_split=genes[1],\n",
+    "            min_samples_leaf=genes[2],\n",
+    "            max_features=max_features_list[genes[3]],\n",
+    "            class_weight=\"balanced\",\n",
+    "        )\n"
+   ],
+   "id": "d022b122a5c08ce5",
    "outputs": [],
    "execution_count": null
   },
@@ -312,7 +343,7 @@
     "        return [0, 0.0001, 0.0001, 128] + [16] * self.qtd_camadas_ocultas\n",
     "\n",
     "    def definirMaximo(self):\n",
-    "        return [3, 1, 1, 512] + [512] * self.qtd_camadas_ocultas\n",
+    "        return [3, 1, 1, 512] + [256] * self.qtd_camadas_ocultas\n",
     "\n",
     "    def gerarModelo(self, genes):\n",
     "        activation = [\"identity\", \"logistic\", \"tanh\", \"relu\"]\n",
@@ -385,6 +416,8 @@
     "def definirAlgoritmo(tipo_algoritmo):\n",
     "    if tipo_algoritmo == \"KNeighborsClassifier\":\n",
     "        return KNN()\n",
+    "    if tipo_algoritmo == \"DecisionTreeClassifier\":\n",
+    "        return DTC()\n",
     "    if tipo_algoritmo == \"RandomForestClassifier\":\n",
     "        return RFC()\n",
     "    if tipo_algoritmo == \"LogisticRegression\":\n",
@@ -418,7 +451,23 @@
     "    else:\n",
     "        mae = mae2\n",
     "\n",
-    "    return deepcopy(pai), deepcopy(mae)\n"
+    "    return deepcopy(pai), deepcopy(mae)\n",
+    "\n",
+    "\n",
+    "def fazerUnderSampling(df_train, y_train):\n",
+    "    menor = y_train.value_counts().min()\n",
+    "\n",
+    "    df_train_bal = (df_train.groupby('target', group_keys=False).\n",
+    "                    apply(lambda grupo: grupo.sample(menor, random_state=42)).reset_index(drop=True))\n",
+    "\n",
+    "    return df_train_bal.iloc[:, :-1], df_train_bal.iloc[:, -1]\n",
+    "\n",
+    "\n",
+    "def fazerOverSampling(x_train, y_train):\n",
+    "    smote = SMOTE(random_state=42)\n",
+    "    x_train_bal, y_train_bal = smote.fit_resample(x_train, y_train)\n",
+    "\n",
+    "    return x_train_bal, y_train_bal"
    ],
    "id": "f12e420763911a7f",
    "outputs": [],
@@ -444,21 +493,30 @@
     "        self.x_teste = None\n",
     "        self.y_teste = None\n",
     "\n",
-    "    def definirXY(self, endereco_parquet):\n",
-    "        dataframe = read_parquet(endereco_parquet)\n",
-    "        x = dataframe.iloc[:, :-1].values\n",
-    "        y = dataframe.iloc[:, -1].values\n",
+    "    def definirXY(self, endereco_parquet, sampling):\n",
+    "        df = read_parquet(endereco_parquet)\n",
     "        scaler = MinMaxScaler()\n",
+    "        x = df.iloc[:, :-1]\n",
+    "        y = df.iloc[:, -1]\n",
     "\n",
-    "        x_train, x_rest, self.y_treinamento, y_rest = train_test_split(\n",
-    "            x, y, test_size=0.3, random_state=42, stratify=y)\n",
+    "        x_train, x_rest, y_train, y_rest = train_test_split(x, y, test_size=0.3, random_state=42, stratify=y)\n",
+    "        df_train = x_train.copy()\n",
+    "        df_train['target'] = y_train\n",
     "\n",
-    "        x_val, x_test, self.y_validacao, self.y_teste = train_test_split(\n",
-    "            x_rest, y_rest, test_size=0.5, random_state=42, stratify=y_rest)\n",
+    "        if sampling == 'under':\n",
+    "            x_train, y_train = fazerUnderSampling(df_train, y_train)\n",
+    "        elif sampling == 'over':\n",
+    "            x_train, y_train = fazerOverSampling(x_train, y_train)\n",
+    "\n",
+    "        x_val, x_test, y_val, y_test = train_test_split(x_rest, y_rest, test_size=0.5, random_state=42, stratify=y_rest)\n",
     "\n",
     "        self.x_treinamento = scaler.fit_transform(x_train)\n",
     "        self.x_validacao = scaler.transform(x_val)\n",
     "        self.x_teste = scaler.transform(x_test)\n",
+    "\n",
+    "        self.y_treinamento = y_train.values\n",
+    "        self.y_validacao = y_val.values\n",
+    "        self.y_teste = y_test.values\n",
     "\n",
     "    def gerarPopulacao(self):\n",
     "        populacao = []\n",
@@ -580,13 +638,14 @@
     "    \"XGBClassifier\",\n",
     "    \"LogisticRegression\",\n",
     "    \"RandomForestClassifier\",\n",
+    "    \"DecisionTreeClassifier\",\n",
     "    \"KNeighborsClassifier\"\n",
     "]\n",
     "\n",
     "for item in lista:\n",
     "    print(item)\n",
     "    ga = GA(10, 10, item)\n",
-    "    ga.definirXY('datasets/mimic IV.parquet')\n",
+    "    ga.definirXY('datasets/mimic IV.parquet', 'none')\n",
     "    ga.executar()\n"
    ],
    "id": "5fbd2e08c02343a3",
